[project]
name = "DolibabyPhp"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Andria Brown", email = "andria_girl@pm.me" }]
dependencies = [
    "furl>=2.1.3",
    "bs4>=0.0.2",
    "cloup>=3.0.5",
    "requests>=2.32.3",
    "uuid>=1.30",
    "structlog>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-requests>=2.32.0.20240622",
    "better-exceptions>=0.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
