[project]
name = "dolibabyphp"
version = "1.0.2"
description = "An authenticated RCE exploit for Dolibarr ERP/CRM CVE-2023-30253."
authors = [{ name = "Andria Brown", email = "andria_girl@pm.me" }]
dependencies = [
    "furl>=2.1.3",
    "bs4>=0.0.2",
    "cloup>=3.0.5",
    "requests>=2.32.3",
    "uuid>=1.30",
    "structlog>=24.2.0",
    "tenacity>=8.5.0",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
dolibabyphp = "dolibabyphp:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-requests>=2.32.0.20240622",
    "better-exceptions>=0.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dolibabyphp"]
sources = ["src"]
